--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <title>Foxoso Hotels</title>
     <meta name="description" content="Foxoso Hotels" />
-
-
-    <!-- <?php include("inc/head.php") ?> -->
-    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/jquery.fancybox.css" media="all" />
+        <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="robots" content="index, follow" />
     <link rel="shortcut icon" href="img/logo.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link href="css/owl.carousel.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/icomoon.css" />
@@ -20,8 +19,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <style type="text/css">
+    <script src="js/jquery-ui.min.js"></script>    <style type="text/css">
       .ui-widget.ui-widget-content {
           position: absolute!important;
       }
@@ -91,7 +89,7 @@
        
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/banner.jpg" alt="" style="width:100%" class="custom-img-responsive" />
+            <img src="img/Home_Page_banner.webp" alt="" style="width:100%" class="custom-img-responsive" />
             <!-- <video width="100%" class="video_desktop" autoplay loop muted playsinline style="height: 100vh;object-fit: cover;">
               <source src="img/banner-video.mp4" type="video/mp4">
             </video> -->
