--- a/index.html
+++ b/index.html
@@ -66,12 +66,15 @@
                   </div>
 
                   <ul class="site-menu main-menu d-lg-block d-none js-clone-nav">
+                    <li><a href="#" class="nav-link ">Home</a></li>
                     <li class="active"><a href="#" class="nav-link">Our Hotels</a></li>
                     <li><a href="#" class="nav-link ">About</a></li>
                     <li><a href="#" class="nav-link ">Gallery</a></li>
                     <li><a href="#" class="nav-link ">Special Offers</a></li>
                     <li><a href="#" class="nav-link ">Corporate events</a></li>
+                    <li><a href="#" class="nav-link ">Weddings</a></li>
                     <li><a href="#" class="nav-link ">Contact Us</a></li>
+                    <li><a href="#booking-engine" class="nav-link btn btn-primary">Book Now</a></li>
                   </ul>
                 </div>
               </nav>
