--- a/index.html
+++ b/index.html
@@ -247,8 +247,7 @@
               <h4>X<span>periences</span></h4>
             </div>
             <p class="text-center">
-            Escape to the tropical paradise of Goa and immerse yourself in the ultimate boutique luxury beach resort at North Goa.
-            Our Foxoso La Beach Resort in Morjim is a paradise for beach lovers seeking a luxurious escape.
+            Discover the diversity of experiences with Foxoso – from relaxing beachside resorts to adventurous desert camping, from serene mountain views to the awe-inspiring 8th wonder of the world. Embark on a journey that celebrates unique destinations and unforgettable moments.
             </p>
             <div class="col-12 text-center voffset1">
               <a href="javascript:void(0);" class="btn btn-primary">Explore More</a>
