--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="row align-items-center">
             <div class="col-1">
               <div class="my-0 site-logo">
-                  <a href="#">
+                  <a href="index.html">
                       <img src="img/logo.png" class="logo" alt="The Grand logo" />
                   </a>
               </div>
@@ -66,14 +66,14 @@
                   </div>
 
                   <ul class="site-menu main-menu d-lg-block d-none js-clone-nav">
-                    <li><a href="#" class="nav-link ">Home</a></li>
-                    <li class="active"><a href="#" class="nav-link">Our Hotels</a></li>
-                    <li><a href="#" class="nav-link ">About</a></li>
-                    <li><a href="#" class="nav-link ">Gallery</a></li>
-                    <li><a href="#" class="nav-link ">Special Offers</a></li>
-                    <li><a href="#" class="nav-link ">Corporate events</a></li>
-                    <li><a href="#" class="nav-link ">Weddings</a></li>
-                    <li><a href="#" class="nav-link ">Contact Us</a></li>
+                    <li class="active"><a href="index.html" class="nav-link ">Home</a></li>
+                    <li ><a href="hotels.html" class="nav-link">Our Hotels</a></li>
+                    <li><a href="about.html" class="nav-link ">About</a></li>
+                    <li><a href="gallery.html" class="nav-link ">Gallery</a></li>
+                    <li><a href="offers.html" class="nav-link ">Special Offers</a></li>
+                    <li><a href="events.html" class="nav-link ">Corporate events</a></li>
+                    <li><a href="weddings.html" class="nav-link ">Weddings</a></li>
+                    <li><a href="contact.html" class="nav-link ">Contact Us</a></li>
                     <li><a href="#booking-engine" class="nav-link btn btn-primary">Book Now</a></li>
                   </ul>
                 </div>
